--- a/eventbridge/src/components/Login/Login.css
+++ b/eventbridge/src/components/Login/Login.css
@@ -1,7 +1,9 @@
 /***    Login Page     ***/
 h2 {
-    font-weight: 500
-
+    font-weight: bold;  /* Makes the title bold */
+    font-size: 2rem;    /* Increases the font size */
+    text-align: left; /* Optional: centers the title */
+    margin-bottom: 1rem; /* Adds space below the title */
 }
 
 form {
@@ -10,19 +12,19 @@ form {
     border: 1px solid #ddd;
     border-radius: 2px;
     padding: 2rem;
-    margin: 2rem 0 1rem 0
+    margin: 2rem 0 1rem 0;
 }
 
 form label {
     float: left;
-    font-size: .9rem;
+    font-size: 0.9rem;
     margin: 0;
-    padding: 0
+    padding: 0;
 }
 
 .right-label {
     float: right;
-    cursor: pointer
+    cursor: pointer;
 }
 
 input {
@@ -31,17 +33,16 @@ input {
     margin-bottom: 15px;
     margin-left: 10px;
     background-color: white;
-    padding: .3rem;
+    padding: 0.3rem;
     border-radius: 5px;
     outline: none;
-    border: none
-    
+    border: none;
 }
 
 #sub_btn {
     display: block;
     width: 100%;
-    padding: .3rem;
+    padding: 0.3rem;
     border: none;
     background: #222;
     color: #0bba37;
@@ -50,10 +51,10 @@ input {
 
 #sub_btn:hover {
     background: #333;
-    transition: all .5s
+    transition: all 0.5s;
 }
 
 footer p {
     margin: 0;
-    font-size: .9rem
+    font-size: 0.9rem;
 }
