--- a/eventbridge/src/Pages/FilterEvents/FilterEvents.css
+++ b/eventbridge/src/Pages/FilterEvents/FilterEvents.css
@@ -1,7 +1,7 @@
 .find-events-wrapper {
-    background-color: var(--bg-color);
+    background-color: whitesmoke;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
