--- a/eventbridge/src/Pages/FilterEvents/FilterEvents.css
+++ b/eventbridge/src/Pages/FilterEvents/FilterEvents.css
@@ -4,7 +4,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding-top: 150px;
   }
