--- a/eventbridge/src/Pages/FilterEvents/FilterEvents.css
+++ b/eventbridge/src/Pages/FilterEvents/FilterEvents.css
@@ -1,10 +1,11 @@
 .find-events-wrapper {
+    background: fixed;
     background-color: whitesmoke;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top: 150px;
+    padding-top: 0;
   }
